(Note: this file has been re-arranged to be in reverse chronological
order, which is The Right Thing for ChangeLogs - DLC)

September 16, 2020 (fortune-mod 3.0.0)

	Convert the documentation from troff to DocBook 5/XML using
	doclifter ( http://www.catb.org/~esr/doclifter/ ). The resultant troff
	man pages are included in the source release tarball.

	Fix formatting of several cookies.

	Minor build fixes (avoid rebuilding the symlinks).

	Fix the build and tests on AppVeyor-CI / Windows

	Fix some compiler warnings and modernise the code a little.

	Add some new fortune cookies.

	New major version digit just in time for Rosh Hashana
	and Talk like a Pirate day. Happy new yea..arrrrrrrrr!

August 30, 2020 (fortune-mod 2.29.1)

	DEVELOPMENT RELEASE

	Fix the build and tests on AppVeyor-CI / Windows

	Fix some compiler warnings.

August 20, 2020 (fortune-mod 2.29.0)

	DEVELOPMENT RELEASE

	Convert the documentation from troff to DocBook 5/XML using
	doclifter ( http://www.catb.org/~esr/doclifter/ ). The resultant troff
	man pages are included in the source release tarball.

	Fix formatting of several cookies.

	Minor build fixes (avoid rebuilding the symlinks).

June 02, 2020 (fortune-mod 2.28.0)

	SECURITY [low risk]: avoid overflow with the -i flag

	Correct attributions and typos (Thanks to Tobin Yehle.)

	Small code cleanups.

May 02, 2020 (fortune-mod 2.26.0)

	SECURITY: Avoid integer overflow in parsing the percentages which caused
	using negative integers.

	https://metacpan.org/pod/Test::Trap is a new tests' dependency

	Format strings cleanups in C.

April 30, 2020 (fortune-mod 2.24.0)

	SECURITY: Avoid some potential buffer overflows in unstr, strfile and randstr.
		- This was found to exist in NetBSD's fortune, and FreeBSD's fortune
		as well (OpenBSD's fortune appear to have been fixed).

	Add regression valgrind tests for the buffer overflows.

	Some cleanups inspired by OpenBSD'd fortune.

April 29, 2020 (fortune-mod 2.22.0)
