@@ -7,6 +7,7 @@ select = **/*.{pl,pm,t}
 
 [PerlCritic]
 select = **/*.{pl,pm,t}
+ignore = rinutils/t/lib/Rinutils/InlineWrap.pm
 
 [TestCount]
 select = **/*.t
