@@ -1,6 +1,11 @@
 (Note: this file has been re-arranged to be in reverse chronological
 order, which is The Right Thing for ChangeLogs - DLC)
 
+September 24, 2020 (fortune-mod 3.2.0)
+
+	Include rinutils in the source tarball / git checkout.
+	( https://github.com/shlomif/fortune-mod/issues/44 )
+
 September 16, 2020 (fortune-mod 3.0.0)
 
 	Convert the documentation from troff to DocBook 5/XML using
